--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
               Project</a>
           </div>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" target="_blank" href="https://www.linkedin.com/in/samantha-caldwell-699975191">Linkedin</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" target="_blank" href="https://github.com/sammycaldwell04">Github</a>
+        </li>
     </div>
   </nav>
 
